--- a/doc/常用函数.md
+++ b/doc/常用函数.md
@@ -1,3 +1,23 @@
 # 常用函数
 
 - var_dump() : 返回变量的数据类型和值
+- unset() : 将变量销毁设置值为NULL
+- empty() : 判断变量或函数返回值是否为空（NULL或false）
+- isset() : 判断传入变量（多个变量通过逗号分隔）是否存在NULL值，存在返回false，否则返回true
+- array() : 初始化数组
+- strlen() : 返回字符串的长度
+- strpos() : 返回首个匹配的字符位置。如果未找到匹配，则将返回 false
+- is_int() : 判断是否为整数
+- is_bool() : 判断是否为布尔值
+- is_float() : 判断是否为小数
+- is_string() : 判断是否为字符串
+- is_array() : 判断是否为数组
+- is_null() : 判断是否为NULL
+- is_resource() : 判断是否为资源
+- is_scalar() : 判断是否为标量
+- is_numberic() : 判断是否为数字
+- is_callable() : 判断是否为函数
+- intval() : 强制转换为整数
+- floatval() : 强制转换为小数
+- strval() : 强制转换为字符串
+- settype() : 设置变量类型
