--- a/doc/数据类型.md
+++ b/doc/数据类型.md
@@ -7,3 +7,24 @@
 - 数组
 - 对象
 - NULL
+
+## 类型转换
+
+### 自动类型转换
+### 强制类型转
+
+- intval() : 强制转换为整数
+- floatval() : 强制转换为小数
+- strval() : 强制转换为字符串
+- settype() : 设置变量类型
+
+也可以通过类型指定转换
+
+```php
+<?php
+$x = 10.15;
+$var = (int)$x;
+$var = (bool)$x;
+$var = (array)$x;
+?>
+```
