--- a/doc/变量.md
+++ b/doc/变量.md
@@ -104,3 +104,19 @@ example();
 ?>
 ```
 
+
+## 常量
+
+常量名以字符或下划线开头，**常量名称前面没有 $ 符号**，与变量不同，常量贯穿整个脚本是自动 **全局** 的
+
+使用 define() 函数定义常量， 它使用三个参数：
+- 首个参数定义常量的名称
+- 第二个参数定义常量的值
+- 可选的第三个参数规定常量名是否对大小写不敏感。默认是 false
+
+```php
+<?php
+define("GREETING", "Welcome to W3School.com.cn!", true);
+echo greeting;
+?>
+```
