--- a/doc/变量.md
+++ b/doc/变量.md
@@ -120,3 +120,15 @@ define("GREETING", "Welcome to W3School.com.cn!", true);
 echo greeting;
 ?>
 ```
+
+## 可变变量(变量指针)
+
+```php
+<?php
+ $a = "sayHello";
+ $sayHello = "Hi ,xing"
+
+ echo $$a; // 输出 Hi ,xing
+?>
+```
+
